@@ -7,6 +7,10 @@ Changes to Version 1.0-6
   o Improvements to plotMeans() legends.
   
   o Barplot() can now compute conditional percentages (suggestion of Beatriz Lacruz); other improvements.
+  
+  o Hist() now invisibly returns a "hist" object or list of "hist" objects (suggestion of Beatriz Lacruz).
+  
+  o Small bug fixes.
 
 Changes to Version 1.0-5
 
